--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-        <script src="test.js" async defer></script>
+        <script src="main.js" async defer></script>
         <link rel="stylesheet" href="index.css">
     </head>
     <body >
